# Starknet-Solana

./: .env.example  .gitignore  Hackathon Submission Note - Koji.md  README.md
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/gallery/: route.ts
frontend/app/gallery/: GalleryClient.tsx
frontend/app/mint/[compositionId]/: MintStatusClient.tsx  page.tsx
frontend/components/: AppShell.tsx  ComposeClient.tsx  EuclideanDots.tsx  SolanaProviders.tsx
frontend/lib/: chain-config.ts  deserialize.test.ts  deserialize.ts  euclid.ts  fetch-midi-with-fallback.ts  find-solana-mint.test.ts  find-solana-mint.ts  gallery-types.ts  koji-starknet.test.ts  koji-starknet.ts  midi-viz.ts  mint-status-types.ts  modes.ts  packMidiToFelts.ts  preview-midi.ts  pubkey-to-felt.ts  rpc-pool.test.ts  rpc-pool.ts  seed-from-address.ts  solana-env.ts  starknet-env.ts  tone-play-midi.ts
relayer/: index.ts  package-lock.json  package.json
relayer/src/: anchor-data.ts  listen-bridge-stub.ts  mint-from-cli.ts  mint.ts  preflight.ts
scripts/: bootstrap-env.sh  deploy-solana.sh  deploy-starknet.sh  prewarm-renderer.sh  register-lz-peers.sh
solana/: .gitignore  Anchor.toml  Cargo.toml  package-lock.json  package.json  tsconfig.json
solana/programs/koji_receiver/: Cargo.toml
solana/programs/koji_receiver/src/: lib.rs
solana/scripts/: fetch-mpl-core.sh
solana/tests/: koji_receiver.ts
starknet/: Scarb.toml
starknet/src/: bridge.cairo  composer.cairo  lib.cairo
(+5 files in other folders)
