[package]
name = "koji_receiver"
version = "0.1.0"
description = "Koji receiver — initialize + relayer-gated mint via Metaplex Core CPI"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "koji_receiver"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]
# Declared so `check-cfg` accepts cfgs emitted by Anchor/Solana program macros.
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = "0.31.1"
mpl-core = { version = "0.11.2", features = ["anchor"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(target_os, values("solana"))',
] }
